--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta name="google-site-verification" content="PR-pMh5PgdTaY1Tvxx-H4SNZ5afZm9R-rryEZ6hDmz8" />
 
     <title>Tanvirul Islam Doha</title>
     <meta content="" name="description" />
